<resources>
    <string name="com.crashlytics.android.build_id">933177cc-a35e-44ec-b20d-6ae42c679fc9</string>
    <string name="Blue">Blue</string>
    <string name="Gold">Gold</string>
    <string name="Green">Green</string>
    <string name="None">None</string>
    <string name="Orange">Orange</string>
    <string name="Pink">Pink</string>
    <string name="Purple">Purple</string>
    <string name="Red">Red</string>
    <string name="Silver">Silver</string>
    <string name="White">White</string>
    <string name="_is_typing_">is typing...</string>
    <string name="_u_email_is_confirmed_u_">Email is Confirmed</string>
    <string name="_u_email_is_unconfirmed_u_">Email is Unconfirmed</string>
    <string name="about_copyright_text">Copyright © 2015 Kik Interactive Inc All rights reserved</string>
    <string name="about_copyright_text_extended">"Copyright © 2015 Kik Interactive Inc All rights reserved

Kik Interactive Inc
420 Weber St North
Suite I
Waterloo, ON
Canada
N2L 4E7"</string>
    <string name="about_copyright_text_extended_link">"Copyright © 2015 Kik Interactive Inc All rights reserved

Kik Interactive Inc
420 Weber St North
Suite I
Waterloo, ON
Canada
N2L 4E7

http://help.kik.com"</string>
    <string name="about_kik">About Kik</string>
    <string name="about_update_kik">Update Kik</string>
    <string name="account_change_configuration">Configuration</string>
    <string name="action_header">Action</string>
    <string name="activity_conversations_block_chat">Block</string>
    <string name="activity_conversations_chat_info">Info</string>
    <string name="activity_conversations_delete_chat">Delete</string>
    <string name="activity_conversations_leave_chat">Leave</string>
    <string name="activity_conversations_mute_chat">Mute</string>
    <string name="activity_conversations_open_chat">Open</string>
    <string name="activity_conversations_report_chat">Report</string>
    <string name="activity_conversations_start_chatting">Chat</string>
    <string name="activity_conversations_unmute_chat">Unmute</string>
    <string name="activity_new_message_hint">Type a message...</string>
    <string name="activity_viewpicture_load_fail">Failed to load full image. Please try again in a minute</string>
    <string name="add_contacts">Add Contacts</string>
    <string name="adding_to_convo_fail_message">Adding to conversation failed. Please try again</string>
    <string name="address_book_cant_access_contacts">"Your address book settings have been updated but Kik can't access your address book. Please check that Kik has access to Contacts in your device Privacy Settings"</string>
    <string name="address_book_matching_settings_were_updated">Address book matching settings were updated</string>
    <string name="admins">Admins</string>
    <string name="adress_opt_out_warning">Are you sure? You will have to find your friends manually</string>
    <string name="alert_disable_notify_for_new_people">"Are you sure you want to disable notifications for new chats? You won't be notified when new people message you"</string>
    <string name="allow_and_continue">Allow and Continue</string>
    <string name="always_allow">Always Allow</string>
    <string name="always_allow_app_to_launch_external">Always allow this app to launch external content</string>
    <string name="always_allow_this_app_to_send_large_messages">Always allow this app to send large messages</string>
    <string name="app_name">Kik</string>
    <string name="application_is_trying_to_launch_x">"This application is trying to launch %1$s 
Do you want to continue?"</string>
    <string name="are_sure_add_user_to_convo">Are you sure you want to add %1$s to the conversation?</string>
    <string name="are_sure_ban_user">%1$s will be unable to message this group and will be unable to join until they have been unbanned</string>
    <string name="are_sure_delete_convo">Are you sure you want to delete this conversation?</string>
    <string name="are_sure_leave_convo">Are you sure you want to leave this conversation?</string>
    <string name="are_sure_promote_admin">%1$s will be able to kick people from the group and change the group name and photo</string>
    <string name="are_sure_remove_user">%1$s will be unable to message this group until they rejoin</string>
    <string name="are_sure_unban_user">%1$s will be removed from the banned list and can rejoin the conversation through an invitation</string>
    <string name="are_you_sure_delete_content">Are you sure you want to delete this content?</string>
    <string name="are_you_sure_you_want_to_clear_your_ignored_messages">Are you sure you want to clear these conversations?</string>
    <string name="ask_already_have_a_kik_account">Already have a Kik account?</string>
    <string name="ask_block_x">Block %1$s?</string>
    <string name="ask_confirm_message_size">"This message contains %1$s of data.
Do you want to continue?"</string>
    <string name="ask_new_to_kik">New to Kik?</string>
    <string name="ask_resend_confirmation_email">Resend confirmation Email?</string>
    <string name="ask_reset_kik">"Are you sure you would like to reset Kik? This will clear your conversation history and you'll need to log in again"</string>
    <string name="ask_unblock_x">Unblock %1$s?</string>
    <string name="back">Back</string>
    <string name="ban_from_group">Ban from Group</string>
    <string name="banlist_full_error">You can only ban %1$s people in a group</string>
    <string name="banned">Banned</string>
    <string name="banned_error_message">"You've been banned from this group."</string>
    <string name="birthday_invalid_less_than_six">Please enter a valid birthday</string>
    <string name="birthday_invalid_less_than_thirteen">Sorry, we were not able to create your account. Please try again later</string>
    <string name="birthday_invalid_missing_date">Please enter your birthday</string>
    <string name="block_list_description">"List of people you've blocked"</string>
    <string name="block_name">Block %s</string>
    <string name="block_x_confirmation_message">Messages from %1$s will be hidden</string>
    <string name="blocked_message_replacement_text">*** Blocked Message ***</string>
    <string name="body_confirm_download">Would you like to download the selected image to your gallery?</string>
    <string name="body_invalid_group_hashtag">The hashtag %s is unavailable. Please choose another hashtag and try again.</string>
    <string name="body_invalid_group_name">Please choose a different name and try again.</string>
    <string name="button_title_reload">Reload</string>
    <string name="button_wifi_settings">Wi-Fi Settings</string>
    <string name="by_clicking_agree_to_tos_and_privacy">"We've updated our &lt;a href=\"http://www.kik.com/terms?v=%1$s\">terms of service&lt;/a> and &lt;a href=\"http://www.kik.com/privacy?v=%1$s\">privacy policy&lt;/a>. You can accept them by clicking \"I Agree\" below"</string>
    <string name="by_clicking_agree_without_links">"We've updated our terms of service and privacy policy. You can accept them by clicking \"I Agree\" below"</string>
    <string name="by_username">By Username</string>
    <string name="camera">Camera</string>
    <string name="cant_retrieve_image">"Can't retrieve image!"</string>
    <string name="captcha_please_complete">Please complete the verification problem to continue with your registration</string>
    <string name="card_reset">Reset</string>
    <string name="change_chat_bubble_color_summary">Change chat bubble color</string>
    <string name="change_group_status">CHANGE</string>
    <string name="change_led_color_summary">Change LED color. Only colors supported by your phone will work</string>
    <string name="change_password">Change Password</string>
    <string name="change_photo">Change Photo</string>
    <string name="chat_bubble_color_bright_blue">Cobalt</string>
    <string name="chat_bubble_color_bright_brown">Brown</string>
    <string name="chat_bubble_color_bright_green">Forest</string>
    <string name="chat_bubble_color_bright_grey">Steel</string>
    <string name="chat_bubble_color_bright_kik_green">Green</string>
    <string name="chat_bubble_color_bright_magenta">Violet</string>
    <string name="chat_bubble_color_bright_orange">Orange</string>
    <string name="chat_bubble_color_bright_pink">Pink</string>
    <string name="chat_bubble_color_bright_red">Crimson</string>
    <string name="chat_bubble_color_bright_violet">Indigo</string>
    <string name="chat_bubble_color_bright_yellow">Gold</string>
    <string name="chat_bubble_color_light_aqua">Mint</string>
    <string name="chat_bubble_color_light_blue">Baby Blue</string>
    <string name="chat_bubble_color_light_brown">Coconut</string>
    <string name="chat_bubble_color_light_grey">Ash</string>
    <string name="chat_bubble_color_light_kik_green">Lime</string>
    <string name="chat_bubble_color_light_magenta">Mauve</string>
    <string name="chat_bubble_color_light_orange">Tangerine</string>
    <string name="chat_bubble_color_light_pink">Blush</string>
    <string name="chat_bubble_color_light_red">Salmon</string>
    <string name="chat_bubble_color_light_violet">Lavender</string>
    <string name="chat_bubble_color_light_yellow">Lemon</string>
    <string name="chat_bubble_colors_bright">Bright</string>
    <string name="chat_bubble_colors_pastel">Pastel</string>
    <string name="chat_bugme_bar_add_success">Success</string>
    <string name="chat_bugme_bar_adding">Adding to Contacts</string>
    <string name="chat_bugme_bar_button_set">Set</string>
    <string name="chat_info_muted_until">Until %1$s</string>
    <string name="chat_with_user_will_be_deleted">The chat with %1$s will be deleted</string>
    <string name="clear_conversations">Clear Conversations</string>
    <string name="code_download_website">http://kik.me/%s #kik #kikme</string>
    <string name="com_mixpanel_android_close">Close</string>
    <string name="com_mixpanel_android_done">Done</string>
    <string name="com_mixpanel_android_exit">Exit</string>
    <string name="com_mixpanel_android_logo">By Mixpanel</string>
    <string name="com_mixpanel_android_next">Next question</string>
    <string name="com_mixpanel_android_notification_image">Image not displayed</string>
    <string name="com_mixpanel_android_previous">Previous question</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_report">Report %s?</string>
    <string name="confirm_unblock">Are you sure you would like to unblock %s?</string>
    <string name="confirmed">Confirmed</string>
    <string name="connecting">Connecting</string>
    <string name="connection_failed_message">"Your data connection isn't working. Please switch to wifi or try again in a bit"</string>
    <string name="connection_failed_title">Connection Failed</string>
    <string name="copy_group_tag">Copy Group Hashtag</string>
    <string name="copy_link_url">Copy Link</string>
    <string name="copy_message">Copy message</string>
    <string name="corrupted_video_could_not_attach">There is something wrong with this video and Kik is unable to send it.</string>
    <string name="corrupted_video_could_not_play">There is something wrong with this video and Kik is unable to play it.</string>
    <string name="couldnt_find_user">No user with the username %1$s was found</string>
    <string name="create_group">Create %1$s</string>
    <string name="current_password">Current Password</string>
    <string name="cutesy_exclamation_1">Ack</string>
    <string name="cutesy_exclamation_2">Huh</string>
    <string name="cutesy_exclamation_3">Dang</string>
    <string name="cutesy_exclamation_4">Oh dear</string>
    <string name="group_name_hint">Name Your Group</string>
    <string name="group_status_invite_only">Invite-Only</string>
    <string name="group_tag_hint">Choose a Hashtag</string>
    <string name="invite_only_description">Members can invite other people</string>
</resources>